# fastapi-social-network

./: .editorconfig  .env_example  .flake8  .gitignore  LICENSE  pyproject.toml
alembic/: env.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
